--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,10 +1,9 @@
-<!doctype html>
-<html lang="en">
+﻿<!doctype html>
+<html>
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/x-icon" href="/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>OBRAX QUANTUM - Sistema de Gestão de Obras</title>
+    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
+    <title>OBRAX QUANTUM</title>
   </head>
   <body>
     <div id="root"></div>
