frontend: aplica layout do Manus, move assets para /public e adiciona health

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -1,9 +1,10 @@
-﻿<!doctype html>
-<html>
+<!doctype html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
-    <title>OBRAX QUANTUM</title>
+    <link rel="icon" type="image/png" href="/favicon.png" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>OBRAX QUANTUM - Sistema de GestÃ£o de Obras</title>
   </head>
   <body>
     <div id="root"></div>
