--- a/frontend/index.html
+++ b/frontend/index.html
@@ -24,6 +24,8 @@
     
     <!-- Single Page Apps for GitHub Pages -->
     <script type="text/javascript">
+      // Single Page Apps for GitHub Pages
+      // https://github.com/rafgraph/spa-github-pages
       (function(l) {
         if (l.search[1] === '/' ) {
           var decoded = l.search.slice(1).split('&').map(function(s) { 
