--- a/frontend/index.html
+++ b/frontend/index.html
@@ -61,5 +61,7 @@
   <body>
     <div id="root"></div>
     <script type="module" src="/src/main.jsx"></script>
+    <!-- script de verificação do backend -->
+    <script type="module" src="/src/health.js"></script>
   </body>
 </html>
