--- a/frontend/index.html
+++ b/frontend/index.html
@@ -60,8 +60,9 @@
   </head>
   <body>
     <div id="root"></div>
+    <!-- App React (Vite) -->
     <script type="module" src="/src/main.jsx"></script>
-    <!-- script de verificação do backend -->
-    <script type="module" src="/src/health.js"></script>
+    <!-- Script simples de verificação do backend (NÃO é módulo) -->
+    <script src="/src/health.js"></script>
   </body>
 </html>
